--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -32,8 +32,8 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-         - { path: ^/login, roles: IS_ANONYMOUS }
-         - { path: ^/user_create, roles: IS_ANONYMOUS }
+        # - { path: ^/login, roles: IS_ANONYMOUS }
+        #- { path: ^/user_create, roles: IS_ANONYMOUS }
          - { path: ^/user, roles: [ROLE_ADMIN] }
          - { path: ^/, roles: [ROLE_USER, ROLE_ADMIN] }
 
