--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -36,6 +36,8 @@ security:
         - { path: ^/login, roles: IS_ANONYMOUS }
         - { path: ^/users, roles: [ROLE_ADMIN] }
         - { path: ^/, roles: [ROLE_USER, ROLE_ADMIN] }
+        - { path: ^/user_create, roles: IS_ANONYMOUS }
+
 
 
 when@test:
